Archive2/dc/15bb94af21723d/output
main.cpp:3:5: error: stray '\316' in program
     auto α = 3;
     ^
main.cpp:3:5: error: stray '\261' in program
main.cpp:4:5: error: stray '\316' in program
     return α;
     ^
main.cpp:4:5: error: stray '\261' in program
main.cpp: In function 'int main()':
main.cpp:3:13: error: expected unqualified-id before '=' token
     auto α = 3;
             ^
main.cpp:4:5: error: return-statement with no value, in function returning 'int' [-fpermissive]
     return α;
     ^
1
