Archive2/dc/15bb94af21723d/main.cpp
int main()
{
    auto α = 3;
    return α;
}